--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="portfolio.html"><i class="bi bi-images navicon"></i> Videos/Instrumentals</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services/songs</a></li>
+        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Audio libray</a></li>
         <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="#">Dropdown 1</a></li>
