--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
       
         <li><a href="portfolio.html"><i class="bi bi-images navicon"></i> Videos/Instrumentals</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services/songs</a></li>
+        <li><a href="services.html"><i class="bi bi-hdd-stack navicon"></i> Audio library</a></li>
         <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="#">Dropdown 1</a></li>
@@ -174,7 +174,7 @@
             <div class="stats-item">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> <span>consequuntur quae</span></p>
+              <p><strong>Happy Clients</strong> <span></span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -182,7 +182,7 @@
             <div class="stats-item">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> <span>adipisci atque cum quia aut</span></p>
+              <p><strong>Projects</strong> <span></span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -190,7 +190,7 @@
             <div class="stats-item">
               <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> <span>aut commodi quaerat</span></p>
+              <p><strong>Hours Of Support</strong> <span></span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -198,7 +198,7 @@
             <div class="stats-item">
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hard Workers</strong> <span>rerum asperiores dolor</span></p>
+              <p><strong>Hard Workers</strong> <span></span></p>
             </div>
           </div><!-- End Stats Item -->
 
