--- a/portfolio.html
+++ b/portfolio.html
@@ -65,8 +65,8 @@
         <li><a href="index.html" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         
         
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Videos/Instrumentals</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services/songs</a></li>
+        <li><a href="portfolio.html"><i class="bi bi-images navicon"></i> Videos/Instrumentals</a></li>
+        <li><a href="services.html"><i class="bi bi-hdd-stack navicon"></i> Audio library</a></li>
         <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="#">Dropdown 1</a></li>
