--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       
         <li><a href="portfolio.html"><i class="bi bi-images navicon"></i> Videos/Instrumentals</a></li>
         <li><a href="services.html"><i class="bi bi-hdd-stack navicon"></i> Audio library</a></li>
+         <li><a href="doclibrary.html"><i class="bi bi-hdd-stack navicon"></i>Doc Library</a></li>
         <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="#">Dropdown 1</a></li>
@@ -324,7 +325,7 @@ and partners, offering insight into the artiste’s creative journey, profession
       </div><!-- End Section Title -->
  <!-- YouTube Video Grid Section -->
   <section class="video-section">
-    <h2>My YouTube Gallery</h2>
+    <h2>My Video Gallery</h2>
     <div class="video-grid">
 
       <!-- Video Card 1 -->
@@ -337,8 +338,8 @@ and partners, offering insight into the artiste’s creative journey, profession
           </iframe>
         </div>
         <div class="video-info">
-          <h3>Video Title 1</h3>
-          <p>Short description of the video.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
 
@@ -352,8 +353,8 @@ and partners, offering insight into the artiste’s creative journey, profession
           </iframe>
         </div>
         <div class="video-info">
-          <h3>Video Title 2</h3>
-          <p>Short description of the video.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
 
@@ -367,8 +368,8 @@ and partners, offering insight into the artiste’s creative journey, profession
           </iframe>
         </div>
         <div class="video-info">
-          <h3>Video Title 3</h3>
-          <p>Short description of the video.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
 
@@ -382,8 +383,8 @@ and partners, offering insight into the artiste’s creative journey, profession
           </iframe>
         </div>
         <div class="video-info">
-          <h3>Video Title 4</h3>
-          <p>Short description of the video.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
 
@@ -397,8 +398,8 @@ and partners, offering insight into the artiste’s creative journey, profession
           </iframe>
         </div>
         <div class="video-info">
-          <h3>Video Title 5</h3>
-          <p>Short description of the video.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
 
@@ -412,8 +413,8 @@ and partners, offering insight into the artiste’s creative journey, profession
           </iframe>
         </div>
         <div class="video-info">
-          <h3>Video Title 6</h3>
-          <p>Short description of the video.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
 
