--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,7 @@
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="portfolio.html"><i class="bi bi-images navicon"></i> Videos/Instrumentals</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Audio libray</a></li>
+         <li><a href="doclibrary.html"><i class="bi bi-hdd-stack navicon"></i>Doc Library</a></li>
         <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="#">Dropdown 1</a></li>
@@ -136,7 +137,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -215,8 +216,18 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
 
-  
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 
 <script src="main.js"></script>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
