--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,7 @@
         
         <li><a href="portfolio.html"><i class="bi bi-images navicon"></i> Videos/Instrumentals</a></li>
         <li><a href="services.html"><i class="bi bi-hdd-stack navicon"></i> Audio library</a></li>
+         <li><a href="doclibrary.html"><i class="bi bi-hdd-stack navicon"></i>Doc Library</a></li>
         <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="#">Dropdown 1</a></li>
@@ -124,8 +125,8 @@ and partners, offering insight into the artiste’s creative journey, profession
           </iframe>
         </div>
         <div class="video-info">
-          <h3>Video Title 1</h3>
-          <p>Short description of the video.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
 
@@ -139,8 +140,8 @@ and partners, offering insight into the artiste’s creative journey, profession
           </iframe>
         </div>
         <div class="video-info">
-          <h3>Video Title 2</h3>
-          <p>Short description of the video.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
 
@@ -154,8 +155,8 @@ and partners, offering insight into the artiste’s creative journey, profession
           </iframe>
         </div>
         <div class="video-info">
-          <h3>Video Title 3</h3>
-          <p>Short description of the video.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
 
@@ -169,8 +170,8 @@ and partners, offering insight into the artiste’s creative journey, profession
           </iframe>
         </div>
         <div class="video-info">
-          <h3>Video Title 4</h3>
-          <p>Short description of the video.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
 
@@ -184,8 +185,8 @@ and partners, offering insight into the artiste’s creative journey, profession
           </iframe>
         </div>
         <div class="video-info">
-          <h3>Video Title 5</h3>
-          <p>Short description of the video.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
 
@@ -199,8 +200,8 @@ and partners, offering insight into the artiste’s creative journey, profession
           </iframe>
         </div>
         <div class="video-info">
-          <h3>Video Title 6</h3>
-          <p>Short description of the video.</p>
+          <h3></h3>
+          <p></p>
         </div>
       </div>
 
