--- a/services.html
+++ b/services.html
@@ -55,6 +55,7 @@
         <li><a href="portfolio.html"><i class="bi bi-images navicon"></i> Videos/Instrumentals</a></li>
         <li><a href="#services" class="active"><i class="bi bi-hdd-stack navicon"></i> Audio library</a></li>
         <li><a href="contact.html"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+         <li><a href="doclibrary.html"><i class="bi bi-hdd-stack navicon"></i>Doc Library</a></li>
       </ul>
     </nav>
   </header>
@@ -114,7 +115,8 @@
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-center mb-4">
       <input type="text" id="searchInput" class="form-control w-100 w-md-50 mb-2 mb-md-0" placeholder="Search songs...">
       <select id="genreFilter" class="form-select w-100 w-md-25">
-        <option value="">All Genres</option>
+        
+        <option value="">all genres</option>
         <option value="Afrobeat">Afrobeat</option>
         <option value="Hip-Hop">Hip-Hop</option>
         <option value="R&B">R&B</option>
@@ -146,27 +148,77 @@
   </div>
 </section>
 
+
+
+
+
+
+
+
+
 <!-- Add this script right before </body> -->
 <script>
   const SONGS = [
     {
-      title: "Sample Track 1",
+      title: "Bo sei",
       artist: "James Akuta",
       genre: "Afrobeat",
-      src: "assets/akus.mp4"
+      src: "assets/Bo sei.mp3"
     },
     {
-      title: "Sample Track 2",
+      title: "Creek side",
       artist: "James Akuta",
-      genre: "Hip-Hop",
-      src: "assets/audio/song2.mp3"
+      genre: "Afrobeat",
+      src: "assets/creek Side Luv.mp3"
     },
     {
-      title: "Sample Track 3",
+      title: "Dacing aloneft KDB",
       artist: "James Akuta",
-      genre: "R&B",
-      src: "assets/audio/song3.mp3"
+      genre: "Afrobeat",
+      src: "assets/Dancing.mp3"
+    },
+
+{
+      title: "Knew what",
+      artist: "James Akuta",
+      genre: "Afrobeat",
+      src: "assets/knew What.mp3"
+    },
+
+
+
+{
+      title: "Not fair",
+      artist: "James Akuta",
+      genre: "Afrobeat",
+      src: "assets/Not Fair.mp3"
+    },
+
+
+{
+      title: "wede",
+      artist: "James Akuta",
+      genre: "Afrobeat",
+      src: "assets/wede.mp3"
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   ];
 
   const songList = document.getElementById("songList");
