--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
 
   </header>
 
-<main class="main"></main>
+<main class="main">
 
      <!-- Contact Section -->
     <section id="contact" class="contact section">
@@ -137,7 +137,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="">
+            <form action="https://formsubmit.co/akusbeatz@gmail.com" method="POST">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -157,7 +157,7 @@
 
                 <div class="col-md-12">
                   <label for="message-field" class="pb-2">Message</label>
-                  <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
+                  <textarea class="form-control" name="msg" rows="10" id="message-field" required=""></textarea>
                 </div>
 
                 <div class="col-md-12 text-center">
