--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ and partners, offering insight into the artiste’s creative journey, profession
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="https://formsubmit.co/akusbeatz@gmail.com" method="POST">
               <div class="row gy-4">
 
                 <div class="col-md-6">
