--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - JAMES AKUTA</title>
+  <title>Index - Akumasi Media</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,7 +48,7 @@
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="s" alt=""> -->
-      <h1 class="sitename"><img src="assets/small.png" alt="My Logo" class="logo-inline"> James Akuta</h1>
+      <h1 class="sitename"><img src="assets/small.png" alt="My Logo" class="logo-inline"> Akumasi Media</h1>
     </a>
 
     <div class="social-links text-center">
@@ -62,10 +62,10 @@
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="index.html" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+        
+       
         <li><a href="portfolio.html"><i class="bi bi-images navicon"></i> Videos/Instrumentals</a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Audio libray</a></li>
+        <li><a href="services.html"><i class="bi bi-hdd-stack navicon"></i> Audio library</a></li>
          <li><a href="doclibrary.html"><i class="bi bi-hdd-stack navicon"></i>Doc Library</a></li>
         <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
@@ -137,7 +137,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="https://formsubmit.co/akusbeatz@gmail.com" method="POST">
+            <form action="https://formsubmit.co/Directakuent@gmail.com" method="POST">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -184,7 +184,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">James Akuta</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Akumasi Media</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
