--- a/doclibrary.html
+++ b/doclibrary.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music Services - James Akuta</title>
-  <meta content="Professional music production services by James Akuta" name="description">
+  <title>Music Services - Akumasi Media</title>
+  <meta content="Professional music production services by Akumasi Media" name="description">
   <meta content="music production, beat making, mixing, mastering, recording" name="keywords">
 
   <!-- Favicons -->
@@ -37,7 +37,7 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <h1 class="sitename"><img src="assets/small.png" alt="Logo" class="logo-inline"> James Akuta</h1>
+      <h1 class="sitename"><img src="assets/small.png" alt="Logo" class="logo-inline"> Akumasi Media</h1>
     </a>
 
     <div class="social-links text-center">
@@ -51,7 +51,7 @@
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="index.html"><i class="bi bi-house navicon"></i> Home</a></li>
-        <li><a href="about.html"><i class="bi bi-person navicon"></i> About</a></li>
+        
         <li><a href="portfolio.html"><i class="bi bi-images navicon"></i> Videos/Instrumentals</a></li>
         <li><a href="services.html" class="active"><i class="bi bi-hdd-stack navicon"></i> Audio library</a></li>
         <li><a href="contact.html"><i class="bi bi-envelope navicon"></i> Contact</a></li>
@@ -88,6 +88,40 @@
 
 
 
+  <footer id="footer" class="footer position-relative light-background">
+
+    <div class="container">
+      <div class="copyright text-center ">
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Akumasi Media</strong> <span>All Rights Reserved</span></p>
+      </div>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you've purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+        Designed by <a href="" >Boboye David</a> 
+      </div>
+    </div>
+
+  </footer>
+
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Preloader -->
+  <div id="preloader"></div>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
 
 
